# ai-image-processor

./: .gitignore  CHANGELOG.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  llm_config.example.json  main.py  pyproject.toml  requirements.txt  run.bat  run.sh
docs/: CODE_REVIEW_REPORT.md  LLM_COLOR_GUIDE.md  LLM_CONFIG_GUIDE.md  LLM_QUICKSTART.md  OPTIMIZATION_SUMMARY_v1.0.0.md  OPTIMIZATION_SUMMARY_v1.1.0.md  RUNNING_ENV.md  STARTUP_OPTIMIZATION.md
scripts/: download_all_models.py  setup.bat  setup.sh
src/: __init__.py
src/ai/: __init__.py  agi_camera.py  async_llm_analyzer.py  color_grading_engine.py  image_retrieval.py  local_llm_analyzer.py  nlp_color_parser.py  style_analyzer.py
src/core/: __init__.py  config.py  config_loader.py  model_manager.py
src/mobile_sam/modeling/: tiny_vit_sam.py
src/ui/: __init__.py  agi_camera_panel.py  color_grading_panel.py  image_library_panel.py  image_picker_dialog.py  image_viewer.py  library_manager_dialog.py  main_window.py  style_sheet.py  ui_utils.py
src/utils/: geometry_utils.py  image_io.py  model_checksum.py
submission/: Project_Plan.md
